<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cooking</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_text">Test Text</string>
    <string name="test_items_text">Create 1 extra items</string>

    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_start">Start Cooking</string>
    <string name="menu_exit">Back to List</string>
    <string name="menu_next">Next</string>
    <string name="menu_prev">Back</string>
    <string name="new_recipe">New Recipe</string>
    <string name="test_num">1.</string>

    <!-- edit recipe activity strings -->
    <string name="er_name">Recipe Name:</string>
    <string name="er_intro">Overview:</string>
    <string name="er_ingredients">Ingredients:</string>
    <string name="er_add_ing">Add another ingredient</string>
    <string name="er_add_step">Add another step</string>
    <string name="er_steps">Steps:</string>
    <string name="name_hint">Name</string>
    <string name="overview_hint">a short description of the recipe</string>

    <!-- edit step activity strings -->
    <string name="es_instructions">Instructions: </string>
    <string name="instructions_hint">enter the instructions for this step</string>
    <string name="es_timer">Timer</string>
    <string name="es_minutes">minutes</string>
    <string name="es_seconds">seconds</string>

    <!-- recipe detail activity strings -->
    <string name="rd_title">Name (gets overwritten)</string>

</resources>
