<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/card_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                style="@style/CardUI">

                <TextView
                    style="@style/CardText"
                    android:text="@string/er_name"
                    android:layout_margin="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_hint"
                    android:ems="10"
                    android:id="@+id/er_recipe_name"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                style="@style/CardUI">

                <TextView
                    style="@style/CardText"
                    android:text="@string/er_intro"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/overview_hint"
                    android:ems="10"
                    android:id="@+id/er_recipe_intro"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                style="@style/CardUI">

                <TextView
                    style="@style/CardText"
                    android:layout_marginLeft="5dp"
                    android:text="@string/er_ingredients" />

                <EditText
                    android:inputType="textAutoCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/er_ing_1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:inputType="textAutoCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/er_ing_2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <!-- TODO add a horizontal line as a separator-->

                <Button
                    android:text="@string/er_add_ing"
                    android:id="@+id/er_add_ing_button"
                    style="@style/CardButton"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                style="@style/CardUI">

                <TextView
                    style="@style/CardText"
                    android:layout_marginLeft="5dp"
                    android:text="@string/er_steps" />

                <!-- TODO add a horizontal line as a separator-->

                <Button
                    android:text="@string/er_add_step"
                    android:id="@+id/er_add_step_button"
                    style="@style/CardButton"/>

                </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>